feat(circle): CRUD circle + add/remove user to/from circle + update docs
