# internal/api/routes.go
@@ -93,23 +93,96 @@ func DefineRoutes() []*restful.WebService {
 	wsRating.Path("/v1/ratings")
 
 	wsRating.Route(wsRating.POST("/{movieId}").
+		Param(wsRating.PathParameter("movieId", "ID of the movie to rate").DataType("int")).
 		Doc("Add rating to movie for specific user").
 		Writes(model.UserRating{}).
 		Returns(201, "Created", model.UserRating{}).
 		Returns(400, "Bad request, fields not validated", model.ErrInternalApiBadRequest.CodeError()).
-		Returns(422, "Not processable, impossible to serialize json to User",
+		Returns(422, "Not processable, impossible to serialize json to Rating",
 			model.ErrInternalApiUnprocessableEntity.CodeError()).
 		Filter(filterUser(true)).
 		To(AddRating))
 
-	return []*restful.WebService{wsRoot, wsMovie, wsUser, wsRating}
+	// CIRCLE
+
+	wsCircle := &restful.WebService{}
+	wsCircle.Path("/v1/circles")
+
+	wsCircle.Route(wsCircle.POST("/").
+		Doc("Create new circle").
+		Writes(model.Circle{}).
+		Returns(201, "Created", model.Circle{}).
+		Returns(400, "Bad request, fields not validated", model.ErrInternalApiBadRequest.CodeError()).
+		Returns(422, "Not processable, impossible to serialize json to Circle",
+			model.ErrInternalApiUnprocessableEntity.CodeError()).
+		Filter(filterUser(true)).
+		To(CreateCircle))
+
+	wsCircle.Route(wsCircle.GET("/").
+		Param(wsCircle.QueryParameter("name", "find circles by name").DataType("string")).
+		Doc("Search for circles").
+		Writes([]model.Circle{}).
+		Returns(200, "Found", []model.Circle{}).
+		Returns(400, "Bad request, fields not validated", model.ErrInternalApiBadRequest.CodeError()).
+		Returns(422, "Not processable, impossible to serialize json to Circle",
+			model.ErrInternalApiUnprocessableEntity.CodeError()).
+		Filter(filterUser(true)).
+		To(GetCircles))
+
+	wsCircle.Route(wsCircle.PUT("/{circleId}").
+		Param(wsCircle.PathParameter("circleId", "ID of circle to update").DataType("int")).
+		Doc("Update existing circle").
+		Writes(model.Circle{}).
+		Returns(200, "Updated", model.Circle{}).
+		Returns(400, "Bad request, fields not validated", model.ErrInternalApiBadRequest.CodeError()).
+		Returns(422, "Not processable, impossible to serialize json to Circle",
+			model.ErrInternalApiUnprocessableEntity.CodeError()).
+		Filter(filterUser(true)).
+		To(UpdateCircle))
+
+	wsCircle.Route(wsCircle.DELETE("/{circleId}").
+		Param(wsCircle.PathParameter("circleId", "ID of circle to delete").DataType("int")).
+		Doc("Delete existing circle").
+		Writes(model.Circle{}).
+		Returns(200, "Updated", model.Circle{}).
+		Returns(400, "Bad request, fields not validated", model.ErrInternalApiBadRequest.CodeError()).
+		Returns(422, "Not processable, impossible to serialize json to Circle",
+			model.ErrInternalApiUnprocessableEntity.CodeError()).
+		Filter(filterUser(true)).
+		To(DeleteCircle))
+
+	wsCircle.Route(wsCircle.PUT("/{circleId}/{userId}").
+		Param(wsCircle.PathParameter("circleId", "ID of circle to update").DataType("int")).
+		Param(wsCircle.PathParameter("userId", "ID of user to add to circle").DataType("int")).
+		Doc("Add user to existing circle").
+		Writes(model.Circle{}).
+		Returns(200, "Updated", model.Circle{}).
+		Returns(400, "Bad request, fields not validated", model.ErrInternalApiBadRequest.CodeError()).
+		Returns(422, "Not processable, impossible to serialize json to Circle",
+			model.ErrInternalApiUnprocessableEntity.CodeError()).
+		Filter(filterUser(true)).
+		To(AddUserToCircle))
+
+	wsCircle.Route(wsCircle.DELETE("/{circleId}/{userId}").
+		Param(wsCircle.PathParameter("circleId", "ID of circle to update").DataType("int")).
+		Param(wsCircle.PathParameter("userId", "ID of user to remove from circle").DataType("int")).
+		Doc("Remove user from existing circle").
+		Writes(model.Circle{}).
+		Returns(200, "Updated", model.Circle{}).
+		Returns(400, "Bad request, fields not validated", model.ErrInternalApiBadRequest.CodeError()).
+		Returns(422, "Not processable, impossible to serialize json to Circle",
+			model.ErrInternalApiUnprocessableEntity.CodeError()).
+		Filter(filterUser(true)).
+		To(RemoveUserFromCircle))
+
+	return []*restful.WebService{wsRoot, wsMovie, wsUser, wsRating, wsCircle}
 }
 
 // Add filter for getting user infos (token, ID, etc...) in order to authenticate him
-func filterUser(checkToken bool) func(*restful.Request, *restful.Response, *restful.FilterChain) {
+func filterUser(needAuthentication bool) func(*restful.Request, *restful.Response, *restful.FilterChain) {
 	filter := func(req *restful.Request, res *restful.Response, chain *restful.FilterChain) {
 		logger.Sugar.Debugf("%s - %s - ", req.Request.Method, req.Request.URL.String())
-		if checkToken {
+		if needAuthentication {
 			username := req.HeaderParameter(userHeaderParameter)
 			logger.Sugar.Debugf("Token will be checked for this resource with username %s", username)
 			if username == "" {
